@@ -37,20 +37,11 @@ class MostcategoriesPage extends QueryPage {
 	}
 
 	function formatResult( $skin, $result ) {
-		global $wgContLang, $wgLang;
-
-		$nt = Title::makeTitle( $result->namespace, $result->title );
-		$text = $wgContLang->convert( $nt->getPrefixedText() );
-
-		$plink = $skin->makeKnownLink( $nt->getPrefixedText(), $text );
-
-		$nl = wfMsgExt( 'ncategories', array( 'parsemag', 'escape' ),
-			$wgLang->formatNum( $result->value ) );
-
-		$nlink = $skin->makeKnownLink( $wgContLang->specialPage( 'Categories' ),
-			$nl, 'article=' . $nt->getPrefixedURL() );
-
-		return wfSpecialList($plink, $nlink);
+		global $wgLang;
+		$title = Title::makeTitleSafe( $result->namespace, $result->title );
+		$count = wfMsgExt( 'ncategories', array( 'parsemag', 'escape' ), $wgLang->formatNum( $result->value ) );
+		$link = $skin->makeKnownLinkObj( $title, $title->getText() );
+		return wfSpecialList( $link, $count );
 	}
 }
 
